--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,19 @@
 <body class="bg-black">
     <div class="mb-11">
     <h1 class="text-white"> THEODETTE   </h1>
-    <h2 class="text-orange-500 ml-24 mt-0">FILLETTE</h2>
+    <h2 class="mt-0 ml-24 text-orange-500">FILLETTE</h2>
 </div>
-<img src="/fi.jpeg" class="w-1/6 h-1/6" >
+<img src="/fi.jpeg" class="w-1/6 h-40" >
+<div>
+<ul class="flex justify-end">
+    <li><a href="#" class="text-white">Home</a></li>
+    <li><a href="#" class="text-white">About</a></li>
+    <li><a href="#" class="text-white">Contact</a></li>
+ </ul>
+</div>
+<div>
+    <h1 class="ml-32 text-center text-white">About Me</h1>
+</div>
     <script src="main.js"></script>
 </body>
 </html>
